# game-engine

./: CMakeLists.txt  README.md  ball.h  engine.cpp  engine.h
common_structs/: camera_data.h  display_data.h  engine_data.h  feature_operation_data.h  object_data.h  routing_data.h
communication/zmq/: zmq_consumer.h  zmq_publisher.h
components/: game_object.cpp  game_object.h  key_event_handler_impl.h  key_events_handler.h  scene.cpp  scene.h  state.h  sync.cpp  sync.h
constraints/: client_constraint.h  consumer_constraint.h  feature_constraint.h  game_object_constraint.h  publisher_constraint.h  server_constraint.h
features/: feature.h  movement.cpp  movement.h  walk.h
graphics/: camera.cpp  camera.h  display.cpp  display.h  mesh.cpp  mesh.h  shader.cpp  shader.h  shape_generator.cpp  shape_generator.h  transform.h
io/: io_events_handler.cpp  io_events_handler.h  io_events_map.cpp  io_events_map.h
shaders/: basicShader.fs  basicShader.vs
